--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   
+    
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^3.7.0",
     "@testing-library/user-event": "^12.1.10",
+    "jest-fetch-mock": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
