--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,4 +8,4 @@ pipelines:
         script:
           - git clone --bare git@bitbucket.org:vkarkhanis/app-ui-vending-machine.git
           - cd app-ui-vending-machine.git
-          - git push --mirror git@bitbucket.org:vkarkhanis/app-ui-vending-machine.git
+          - git push --mirror git@github.com:vkarkhanis/app-ui-vending-machine.git
